--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 <!-- scial media icon link -->
 
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
